@@ -31,7 +31,8 @@ void LayerListDelegate::paint(QPainter *painter, const QStyleOptionViewItem &opt
 	const canvas::LayerListItem &layer = index.data().value<canvas::LayerListItem>();
 
 	if(index.data(canvas::LayerListModel::IsLockedRole).toBool() ||
-	   index.data(canvas::LayerListModel::IsHiddenInFrameRole).toBool()) {
+	   index.data(canvas::LayerListModel::IsHiddenInFrameRole).toBool() ||
+	   index.data(canvas::LayerListModel::IsHiddenInTreeRole).toBool()) {
 		opt.state &= ~QStyle::State_Enabled;
 	}
 
