@@ -40,6 +40,21 @@ QVariant LayerListModel::data(const QModelIndex &index, int role) const
 	case IsGroupRole: return item.group;
 	case IsEmptyRole: return item.children == 0;
 	case IsHiddenInFrameRole: return m_frameMode && !m_frameLayers.contains(item.id);
+	case IsHiddenInTreeRole: {
+		if(item.hidden) {
+			return true;
+		} else {
+			QModelIndex current = index.parent();
+			while(current.isValid()) {
+				if(m_items.at(current.internalId()).hidden) {
+					return true;
+				} else {
+					current = current.parent();
+				}
+			}
+			return false;
+		}
+	}
 	}
 
 	return QVariant();
